--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -9,6 +9,6 @@ jobs:
       
       - name: Self test
         id: selftest
-        uses: marvinbuss/AMLWorkspace@master
+        uses: Azure/aml-workspace@master
         with:
           azureCredentials: ${{ secrets.AZURE_CREDENTIALS }}
