--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -6,13 +6,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Python 3.7
+        id: python_setup
         uses: actions/setup-python@v1
         with:
           python-version: "3.7"
 
-      - uses: actions/checkout@v1
+      - name: Check Out Repository
+        id: checkout_repository
+        uses: actions/checkout@v1
 
       - name: Lint
+        id: python_linting
         run: |
           pip install flake8
           flake8 --ignore E501 main.py
