--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check Out Repository
+        id: checkout_repository
         uses: actions/checkout@master
       
       - name: Self test
