--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -20,3 +20,4 @@ jobs:
         run: |
           pip install flake8
           flake8 --ignore E501 code/main.py
+          flake8 --ignore E501 code/utils.py
