--- a/action.yml
+++ b/action.yml
@@ -2,10 +2,10 @@ name: "Azure Machine Learning Workspace"
 description: "Connect to or create an Azure Machine Learning Workspace with this GitHub Action"
 author: "azure/gh-aml"
 inputs:
-  azureCredentials:
+  azure_credentials:
     description: "Paste output of `az ad sp create-for-rbac --name <your-sp-name> --role contributor --scopes /subscriptions/<your-subscriptionId>/resourceGroups/<your-rg> --sdk-auth` as value of secret variable: AZURE_CREDENTIALS"
     required: true
-  parametersFile:
+  parameters_file:
     description: "JSON file including the parameters of the workspace."
     required: false
     default: "workspace.json"
