--- a/.github/workflows/synch_docs.yml
+++ b/.github/workflows/synch_docs.yml
@@ -1,5 +1,10 @@
 name: Synch Documentation
-on: [push, pull_request]
+on: 
+  push:
+    branches:
+      - master
+    paths:
+      - 'README.md'
 jobs:
   synch:
     runs-on: ubuntu-latest
