--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Test
         id: python_test
         run: |
-          pip install pytest jsonschema
+          pip install pytest jsonschema azureml-sdk
           pytest
