--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,8 +1,8 @@
-name: Test
+name: Lint and Test
 on: [push, pull_request]
 jobs:
-  test:
-    name: Test
+  lint:
+    name: Lint and Test
     runs-on: ubuntu-latest
     steps:
       - name: Set up Python 3.7
@@ -14,10 +14,15 @@ jobs:
       - name: Check Out Repository
         id: checkout_repository
         uses: actions/checkout@v1
+
+      - name: Lint
+        id: python_linting
+        run: |
+          pip install flake8
+          flake8 code/ test/ --count --ignore E501 --show-source --statistics
       
       - name: Test
         id: python_test
         run: |
-          ls
           pip install pytest jsonschema azureml-sdk
           pytest
