updated lint workflow

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -19,7 +19,8 @@ jobs:
         id: python_linting
         run: |
           pip install flake8
-          flake8 code/ test/ --count --ignore E501 --show-source --statistics
+          flake8 code/ --count --ignore=E501 --show-source --statistics
+          flake8 tests/ --count --ignore=E501,E402 --show-source --statistics
       
       - name: Test
         id: python_test
