--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - uses: Actions-R-Us/actions-tagger@latest
         with:
+          prefer_branch_releases: true
           publish_latest: true
         env:
           GITHUB_TOKEN: '${{secrets.GITHUB_TOKEN}}'
