update versioning workflow

--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -10,7 +10,6 @@ jobs:
     steps:
       - uses: Actions-R-Us/actions-tagger@latest
         with:
-          prefer_branch_releases: true
-          publish_latest: true
+          publish_latest_tag: true
         env:
           GITHUB_TOKEN: '${{secrets.GITHUB_TOKEN}}'
